<resources>
    <string name="app_name">HospitalityProject</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_hospital">Hospital</string>
    <string name="title_analytics">Estadísticas</string>
    <string name="title_profile">Perfil</string>

    <string name="login_correo">Correo</string>
    <string name="login_contraseña">Contraseña</string>
    <string name="login_iniciarSesion">Iniciar Sesión</string>
    <string name="login_registrarme">Registrarme</string>
    <string name="login_ingresar">----- Ingresar por -----</string>

    <string name="title_register">REGISTRARME</string>
    <string name="registro_nombre">Nombres</string>
    <string name="registro_apellidos">Apellidos</string>
    <string name="registro_direccion">Dirección</string>
    <string name="registro_movil">Móvil</string>
    <string name="registro_correo">Correo</string>
    <string name="registro_contraseña">Contraseña</string>
    <string name="registro_guardar">GUARDAR</string>
    <string name="registro_cancelar">CANCELAR</string>

    <string name="editar_perfil">EDITAR MI PERFIL</string>
    <string name="editar_nombre">Ingerese Nombres</string>
    <string name="editar_apellido">Ingrese Apellidos</string>
    <string name="editar_direccion">Ingrese Dirección</string>
    <string name="editar_telefono">Ingrese Teléfono</string>
    <string name="editar_guardar">GUARDAR</string>
    <string name="editar_cerrar">CERRAR SESIÓN</string>


    <string name="inicio_categoria">Ingrese categoría de hospital</string>
    <string name="inicio_enviar">Enviar Datos</string>
    <string name="inicio_cate">Categoría</string>


    <string name="home_hospital">Hospital Disponible</string>
    <string name="home_reservar">Reservar Cita</string>

    <string name="list_nombre">Nombre del Hospital</string>
    <string name="list_id">Id</string>
    <string name="list_telefono">Teléfono</string>
    <string name="list_direccion">Dirección</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hospitales_disponibles">HOSPITALES DISPONIBLES</string>
    <string name="ReservarCita">Reservar Cita</string>
    <string name="reserve_date_attention">Elija fecha de reserva</string>

</resources>
